syntax = "proto3";

option go_package = "./proto";

package proto.enumerations;

enum Color {
    NONE = 0;
    RED = 1;    
    GREEN = 2;
    BLUE = 3;
}

message Enumeration{
    Color eye_color = 1;
}