syntax = "proto3";

option go_package = "./proto";

package proto.simple;

message Simple{
    uint32 id = 1;
    bool is_simple = 2;
    string name = 3;
    repeated int32 sample_list = 4;
}
